--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,14 @@
 /* -----------HTML------------- */
 
 body {
+    /* display: flex; */
+    min-height: 100vh;
+    width: 80%;
     margin: 0;
     padding: 0;
-    border-collapse: collapse;
+    /* border-collapse: collapse;
+    align-items: center;
+    justify-content: center; */
     font-family: mono45-headline, monospace, Helvetica;
     background-color: #404040;
     color: white; 
